JJ Hublin ref included

--- a/References/MyLibraryATE.bib
+++ b/References/MyLibraryATE.bib
@@ -1822,3 +1822,29 @@ An ancient human genome illuminates human demography in Eurasia and Europe.},
 	author = {Hajdinjak, Mateja and Mafessoni, Fabrizio and Skov, Laurits and Vernot, Benjamin and Peter, Benjamin and Meyer, Matthias and Skoglund, Pontus and Kelso, Janet and Pääbo, Svante},
 	year = {2021}
 }
+
+
+@article{hublin_last_2017,
+	title = {The last {Neanderthal}},
+	volume = {114},
+	issn = {0027-8424, 1091-6490},
+	url = {https://www.pnas.org/content/114/40/10520},
+	doi = {10.1073/pnas.1714533114},
+	abstract = {The mechanism of the Neanderthal extinction and their replacement by modern humans of African origin is one of the most discussed issues in paleoanthropology. Central to this discussion are the questions of the chronological overlap between Neanderthal populations and modern humans in Western Eurasia and the precise geographical circumstances of this overlap. For a long time, the Vindija (Croatia) site was considered to provide solid evidence for a long survival of Neanderthals in Central/Southern Europe. Not only did directly dated Neanderthal remains from layer G1 of the site provide radiocarbon ages postdating the most widely accepted transition time of 40–35,000 radiocarbon years ago (1), but the same layer also yielded a type of split-based bone points commonly assigned to the Aurignacian (2), a stone artefact industry of the early Upper Paleolithic that, to date, only yielded human remains of a modern nature (3). For some, this situation implied the possibility of a long and complex interaction between the two groups of hominins in this region and also falsified the notion of a systematic association between defined archaeological assemblages and specific biological populations at the time of the replacement. In PNAS, Devièse et al. (4) provide new radiocarbon dates for the same Vindija Neanderthal samples, dating them to before 40,000 14C B.P., significantly older than previous efforts dating this material to 29–28,000 and 33–32,000 radiocarbon years (1). The bone points of layer G1 could not be dated, but the range of ages obtained from faunal and human samples in this layer suggests taphonomic mixing as a likely mechanism to explain their stratigraphic association in this part of the Vindija stratigraphic sequence. The situation in Vindija is therefore not at all exceptional, and previous results can be explained by the effect of sample contamination and layer admixture.
+
+The first message delivered … 
+
+[↵][1]1Email: hublin\{at\}eva.mpg.de.
+
+ [1]: \#xref-corresp-1-1},
+	language = {en},
+	number = {40},
+	urldate = {2021-01-14},
+	journal = {Proceedings of the National Academy of Sciences},
+	author = {Hublin, Jean-Jacques},
+	month = oct,
+	year = {2017},
+	pmid = {28973864},
+	pages = {10520--10522},
+	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/CRRK2YKH/Hublin - 2017 - The last Neanderthal.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/7ZJ5URXF/10520.html:text/html}
+}
